[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "permeabledt"
version = "0.1.0"
description = "Digital-twin tools for permeable pavement modeling, calibration, particle filtering, and weather data acquisition"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    { name="Jose Brasil", email="jose.brasil@utsa.edu" }
]
keywords = ["hydrology", "pavement", "digital twin", "stormwater", "particle filter", "weather data", "HRRR"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Hydrology",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
    "Development Status :: 4 - Beta"
]


dependencies = [
    "pandas>=1.3.0",
    "numpy>=1.20.0",
    "configparser",
    "datetime"
]

[project.urls]
"Homepage" = "https://github.com/arturbra/permeabledt"
"Documentation" = "https://github.com/arturbra/permeabledt#readme"
"Source" = "https://github.com/arturbra/permeabledt"
"Issues" = "https://github.com/arturbra/permeabledt/issues"

[project.optional-dependencies]
# Calibration support (genetic algorithms)
calib = [
    "deap>=1.3.0",
    "scikit-learn>=1.0.0"
]

# Particle filtering support
pf = [
    "pypfilt>=0.6.0",
    "scipy>=1.7.0",
    "tomlkit>=0.11.0"
]

# Plotting functionality
plots = [
    "matplotlib>=3.5.0"
]

# Weather data support
weather = [
    "herbie-data>=2023.4.0",
    "xarray>=0.20.0",
    "pytz>=2021.3"
]

# Development dependencies
dev = [
    "pytest>=6.0.0",
    "pytest-cov>=2.12.0",
    "black>=21.0.0",
    "flake8>=3.9.0",
    "mypy>=0.910"
]

# All optional features
all = [
    "deap>=1.3.0",
    "scikit-learn>=1.0.0",
    "pypfilt>=0.6.0",
    "scipy>=1.7.0",
    "tomlkit>=0.11.0",
    "matplotlib>=3.5.0",
    "SALib>=1.4.0",
    "tqdm>=4.60.0",
    "herbie-data>=2023.4.0",
    "xarray>=0.20.0",
    "pytz>=2021.3"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["permeabledt"]